// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hexGameReducer returns the initial state 1`] = `
Object {
  "boardSize": 5,
  "history": Array [
    Array [
      "blue",
      "red",
      "red",
      "red",
      "red",
      "blue",
      undefined,
      undefined,
      undefined,
      "blue",
      "blue",
      undefined,
      undefined,
      undefined,
      "blue",
      "blue",
      undefined,
      undefined,
      undefined,
      "blue",
      "red",
      "red",
      "red",
      "red",
      "blue",
    ],
  ],
  "turnNumber": 0,
}
`;

exports[`hexGameReducer should handle the changeBoardSizeAction action correctly 1`] = `
Object {
  "boardSize": 9,
  "history": Array [
    Array [
      "blue",
      "red",
      "red",
      "red",
      "red",
      "red",
      "red",
      "red",
      "red",
      "blue",
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
      "blue",
      "blue",
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
      "blue",
      "blue",
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
      "blue",
      "blue",
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
      "blue",
      "blue",
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
      "blue",
      "blue",
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
      "blue",
      "blue",
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
      "blue",
      "red",
      "red",
      "red",
      "red",
      "red",
      "red",
      "red",
      "red",
      "blue",
    ],
  ],
  "turnNumber": 0,
}
`;

exports[`hexGameReducer should handle the claimHexAction action correctly 1`] = `
Object {
  "boardSize": 5,
  "history": Array [
    Array [
      "blue",
      "red",
      "red",
      "red",
      "red",
      "blue",
      undefined,
      undefined,
      undefined,
      "blue",
      "blue",
      undefined,
      undefined,
      undefined,
      "blue",
      "blue",
      undefined,
      undefined,
      undefined,
      "blue",
      "red",
      "red",
      "red",
      "red",
      "blue",
    ],
    Array [
      "blue",
      "red",
      "red",
      "red",
      "red",
      "blue",
      undefined,
      undefined,
      undefined,
      "blue",
      "blue",
      undefined,
      undefined,
      undefined,
      "blue",
      "blue",
      undefined,
      undefined,
      undefined,
      "blue",
      "red",
      "red",
      "red",
      "red",
      "blue",
    ],
  ],
  "turnNumber": 1,
}
`;
